<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainEditHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:orientation="vertical"
    tools:context=".TaskEditActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1.3"
        app:cardBackgroundColor="@color/light_pink"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/saveTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/editTaskNamePlainText"
                android:textSize="20sp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.1"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/enter_task_name_on_plain_text_view"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white" />

            <Button
                android:id="@+id/editTaskTimeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.1"
                android:background="@drawable/rounded_button"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/enter_task_time_on_button"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/editTaskDateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.1"
                android:background="@drawable/rounded_button"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/enter_task_date_on_button"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTaskDescPlainText"
                android:textSize="20sp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.9"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:gravity="center"
                android:inputType="text"
                android:hint="@string/enter_task_desc_on_plain_text"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/saveTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.0001"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>